# DeepLearningFashionMNIST

./: .gitignore  README.md
LeNet5_Regularization_FashionMNIST/: README.md
LeNet5_Regularization_FashionMNIST/runs/LeNet5_bn/: events.out.tfevents.1733393867.Devs-MacBook-Air.local.21765.3
LeNet5_Regularization_FashionMNIST/runs/LeNet5_dropout/: events.out.tfevents.1733394845.Devs-MacBook-Air.local.21765.6
LeNet5_Regularization_FashionMNIST/runs/LeNet5_vanilla/: events.out.tfevents.1733393742.Devs-MacBook-Air.local.21765.0
LeNet5_Regularization_FashionMNIST/runs/LeNet5_weight_decay/: events.out.tfevents.1733395781.Devs-MacBook-Air.local.21765.9
Multimodal_Fusion_TimeSeries_Models/models/: CTGlstm_model.pth  lstm_model.pth
Multimodal_Fusion_TimeSeries_Models/notebooks/: Final_Project_Preprocessing.ipynb  UCI_ML_exploration.ipynb
Multimodal_Fusion_TimeSeries_Models/runs/Apr03_09-12-03_Devs-MacBook-Air.local/: events.out.tfevents.1743660723.Devs-MacBook-Air.local.61850.0
Multimodal_Fusion_TimeSeries_Models/runs/Apr03_09-13-26_Devs-MacBook-Air.local/: events.out.tfevents.1743660806.Devs-MacBook-Air.local.62637.0
Multimodal_Fusion_TimeSeries_Models/scripts/: Hubert_ECG_transformer.py  LSTM_LightGBM.py  LSTM_fusion.py  LSTM_with_tuner.py  Signals_Transformer.py  get_ehr.py  get_labels.py  get_signals.py  paper_figures.ipynb  transformer.py
VAE_SVM_SemiSupervised_FashionMNIST/: FashionMNIST_SemiSupervised.ipynb  problem3_semisupervised.ipynb  pyproject.toml
VAE_SVM_SemiSupervised_FashionMNIST/.ipynb_checkpoints/: problem3_gan-checkpoint.ipynb
(+9 files in other folders)
