[project]
name = "hw3"
version = "0.1.0"
description = "Deep learning course VAE_SVM_SemiSupervised_FashionMNIST, TAU"
authors = [
    {name = "DevL",email = "dvora.leibowitz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "matplotlib (<3.10)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tensorboard (>=2.18.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
